--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,18 +28,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 16
 
       - name: Install Surge
         run: npm install -g surge
 
       - name: Install dependencies
         run: yarn
+
+      - name: Enable legacy OpenSSL provider
+        run: export NODE_OPTIONS=--openssl-legacy-provider
 
       - name: Build application
         run: yarn build
