--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,12 @@ jobs:
       - name: Install dependencies
         run: yarn
 
+      - name: Update caniuse-lite.
+        run: npx browserslist@latest --update-db
+
+      - name: Enable legacy OpenSSL provider
+        run: export NODE_OPTIONS=--openssl-legacy-provider
+
       - name: Build application
         run: yarn build
 
@@ -40,6 +46,9 @@ jobs:
 
       - name: Install dependencies
         run: yarn
+
+      - name: Update caniuse-lite.
+        run: npx browserslist@latest --update-db
 
       - name: Enable legacy OpenSSL provider
         run: export NODE_OPTIONS=--openssl-legacy-provider
