Use legacy openssl

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,8 @@
   publish = ".next"
   command = "yarn build"
 
+[build.environment]
+  NODE_OPTIONS = "--openssl-legacy-provider"
+
 [[plugins]]
   package = "@netlify/plugin-nextjs"
