--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-toastify": "^4.5.1",
     "react-vertical-timeline-component": "^2.3.1",
     "reactstrap": "^6.5.0",
+    "sharp": "^0.33.5",
     "yarn": "^1.22.0"
   },
   "devDependencies": {
