--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  publish = "out"
-  command = "yarn build && yarn export"
+  publish = ".next"
+  command = "yarn build"
 
 [build.environment]
   NODE_VERSION = "20"
